--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Eventiators">
         <activity
-            android:name=".Home_Screen_Drawer"
-            android:label="@string/title_activity_home__screen__drawer"
+            android:name=".nav_act_home"
+            android:label="@string/title_activity_nav_act_home"
             android:theme="@style/Theme.Eventiators.NoActionBar"></activity>
         <activity android:name=".admin_home" />
         <activity
