--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Eventiators">
-        <activity android:name=".DecoreEventByIntent"></activity>
+        <activity android:name=".ModelActivity"></activity>
+        <activity android:name=".DecoreEventByIntent" />
         <activity android:name=".InvitationCard" />
         <activity android:name=".OrderGifts" />
         <activity android:name=".OrderCake" />
