--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Eventiators">
-        <activity android:name=".photographerByIntent"></activity>
+        <activity android:name=".AdminNewHome"></activity>
+        <activity android:name=".AdminViewCatering" />
+        <activity android:name=".AdminShowCakeOrders" />
+        <activity android:name=".AdminViewPhotographer" />
+        <activity android:name=".AdminDecoration" />
+        <activity android:name=".ViewCateringOrders" />
+        <activity android:name=".CateringByIntent" />
+        <activity android:name=".photographerByIntent" />
         <activity android:name=".OrderCakeByIntent" />
         <activity android:name=".View_Gift_orders" />
         <activity android:name=".View_cake_orders" />
-        <activity android:name=".View_catering_service_orders" />
         <activity android:name=".View_photographer_bookings" />
         <activity android:name=".View_Decoration_orders" />
         <activity android:name=".ModelActivity" />
